--- a/kmeans-deployment.yaml
+++ b/kmeans-deployment.yaml
@@ -22,3 +22,10 @@ spec:
             - containerPort: 4040
               protocol: TCP
           imagePullPolicy: Never
+          resources:
+          limits:
+            cpu: "1"
+            memory: "500Mi"
+          requests:
+            cpu: "0.5"
+            memory: "200Mi"
